--- a/client/factory.html
+++ b/client/factory.html
@@ -184,7 +184,8 @@
                                     <input type="range" min="10" max="98" class="form-control-range" id="mouthcolor">
                                 </div>
                                 <div class="form-group">
-                                    <label for="formControlRange"><b>Eye Color</b><span class="badge badge-dark ml-2" id="eyeName"></span></label>
+                                    <label for="formControlRange"><b>Eye Color</b>
+                                        <span class="badge badge-dark ml-2" id="eyeName"></span></label>
                                     <input type="range" min="1" max="8" class="form-control-range" id="eyeshape">
                                 </div>
                                 <div class="form-group">
@@ -225,7 +226,7 @@
                                     <button class="btn btn-primary btn-sm tsp-1 m-1 light-b-shadow" id="defaultButton"><b>Get Default Cat</b></button>
                                 </div>
                                 <div class="group btn float-right">
-                                    <button class="btn btn-success btn-sm mr-5 tsp-1 m-1 light-b-shadow" id="createButton" ><b>Create New Cat</b></button>
+                                    <button class="btn btn-success btn-sm mr-5 tsp-1 m-1 light-b-shadow" id="createButton"><b>Create New Cat</b></button>
                                 </div>
                             <br>
                             
