--- a/client/index.html
+++ b/client/index.html
@@ -126,12 +126,12 @@
 
   </body>
   <!-- <script src="./index.js"></script>  -->
-  <script src="assets/js/colors.js"></script>
-  <script src="assets/js/catSettings.js"></script>
-  <script src="assets/js/catFactory.js"></script>
-  <script src="assets/js/navigation.js"></script>
-  <script src="assets/js/components/render.js"></script>
-  <script src="assets/js/components/components.js"></script>
+  <script src="./assets/js/colors.js"></script>
+  <!-- <script src="././assets/js/catSettings.js"></script> -->
+  <!-- <script src="./assets/js/catFactory.js"></script> -->
+  <script src="./assets/js/navigation.js"></script>
+  <script src="./assets/js/components/render.js"></script>
+  <script src="./assets/js/components/components.js"></script>
   
 
 </html>
